--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </style>
 </head>
 <body>
-    <button class="translucent-btn" onclick="window.location.href='http://localhost:8000/quiz.html';">
+    <button class="translucent-btn" onclick="/quiz.html';">
         Open Quiz
     </button>
     
