--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     </style>
 </head>
 <body>
-    <button class="translucent-btn" onclick="/quiz.html';">
-        Open Quiz
-    </button>
+    <a href="quiz.html">
+        <button>Open Quiz</button>
+    </a>
     
     
     <div class="details" id="planet-details" style="display: none;">
