--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
     <a href="quiz.html">
-        <button>Open Quiz</button>
+        <button class="translucent-btn">Open Quiz</button>
     </a>
     
     
